@@ -1,9 +1,18 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+
+          provide actual name of releaser(s) in ConfirmRelease
+
           error message if "dzil run" is run without a command to run
 
           some minor refactoring in listdeps (Jon Rockway)
+
+          listdeps can now skip already-met prereqs (Jesse Luehrs)
+
+          authordeps now skips plugins under inc:: (Jesse Luehrs)
+
+          authordeps now scans for "; authordep" comments
 
 4.200004  2011-02-11 16:17:37 America/New_York
 
